2005-11-08  Elijah Newren  <newren@gmail.com>

	Very basic edge resistance stuff starting to work.  Only for
	moves, debugging threshold ridiculously huge for easier testing,
	snap-moving disabled, yadda yadda yadda IT ISN'T READY YET.

	* src/display.c:

	(find_index_of_edge_near_position):
	new binary-search-esque function

	(apply_edge_resistance):
	new function, only very basics implemented so far (with a
	ridiculously huge threshold just for testing)

	(cache_edges):
	remove an extraneous debugging warning that I missed earlier

	* src/display.[ch]:

	(meta_display_apply_edge_resistance):
	new public function, doing work through calls to
	apply_edge_resistance() currently

	* src/window.c:

	(update_move):
	temporarily disable snap moving, call
	meta_display_apply_edge_resistance() to get some basic edge
	resistance working

2005-11-07  Elijah Newren  <newren@gmail.com>

	* src/boxes.[ch]:

	(meta_rectangle_remove_intersections_with_boxes_from_edges):
	remove rectangles_are_struts parameter as we in general want left
	sides of windows to be treated as resisting the right edge of the
	moving window -- i.e. everything is treated the same as struts.

	* src/display.c:

	(compute_resistance_and_snapping_edges):
	note that left sides of windows are considered right edges because
	that's what the right side of the moving window will be
	resisted-by/snapped-to (and similarly for all the other edges),
	combine the obscuring_windows and obscuring_docks as made possible
	by this change

2005-11-06  Elijah Newren  <newren@gmail.com>

	Cache (and sort) all the edges in some nice arrays for quick
	access.  Clean them up when the grab op ends.

	* src/display.[ch]:

	(struct MetaDisplay):
	add a grab_edge_resistance_data field for caching information
	relevant for edge resistance
	
	* src/display.c:

	(struct MetaEdgeResistanceData):
	new struct where we cache all these edges in a nice sorted way

	(cleanup_edges):
	new function

	(meta_display_end_grab_op):